<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="observableMeme"
            type="com.darrenfinch.memegenerator.screens.editmeme.ObservableMeme" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_back"
                app:title="@string/edit_meme"
                app:titleTextColor="@color/colorTextLight">

            </androidx.appcompat.widget.Toolbar>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/memeImageLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" >

                <!--suppress AndroidUnknownAttribute -->
                <ImageView
                    android:id="@+id/memeImage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="fitCenter"
                    app:imageUrl="@{observableMeme.imageUrl}"
                    app:error="@{@drawable/ic_error_outline}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/topText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:background="#59000000"
                    android:text="@{observableMeme.topText}"
                    android:textColor="@color/colorTextLight"
                    android:textSize="24sp"
                    tools:text="Test"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/memeImageLayout" />

                <TextView
                    android:id="@+id/bottomText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="#59000000"
                    android:gravity="center"
                    android:text="@{observableMeme.bottomText}"
                    android:textColor="@color/colorTextLight"
                    android:textSize="24sp"
                    tools:text="Test"
                    app:layout_constraintBottom_toBottomOf="@+id/memeImageLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/topTextEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/memeImageLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/topTextEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/top_text"
                    android:textColor="@color/colorTextDark"
                    android:text="@={observableMeme.topText}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memeImageLayout" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bottomTextEditTextLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topTextEditTextLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bottomTextEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bottom_text"
                    android:textColor="@color/colorTextDark"
                    android:text="@={observableMeme.bottomText}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/memeImageLayout" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/viewTopTextCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="@string/see_top_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bottomTextEditTextLayout" />

            <CheckBox
                android:id="@+id/viewBottomTextCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:checked="true"
                android:text="@string/see_bottom_text"
                app:layout_constraintStart_toEndOf="@+id/viewTopTextCheckbox"
                app:layout_constraintTop_toBottomOf="@+id/bottomTextEditTextLayout" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Font Size"
                android:textAppearance="@style/H2Dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/viewTopTextCheckbox" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/increaseFontSizeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="+"
                app:layout_constraintStart_toEndOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/viewTopTextCheckbox" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decreaseFontSizeButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:padding="0dp"
                android:text="-"
                app:layout_constraintStart_toEndOf="@+id/increaseFontSizeButton"
                app:layout_constraintTop_toBottomOf="@+id/viewBottomTextCheckbox" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
